# generate-challenge

./: pyproject.toml
generate_challenge/: challenge.ipynb
generate_challenge/.ipynb_checkpoints/: challenge-checkpoint.ipynb
tests/: test_generate_challenge.py
